got categories working

--- a/src/app/photo-comp/photo-comp.component.html
+++ b/src/app/photo-comp/photo-comp.component.html
@@ -1,14 +1,16 @@
-<a
-  class="img"
-  [routerLink]="['/photo']"
-  [state]="{ image: urls, user: user, fromImage: true }"
->
-  <img class="img" [src]="urls?.regular" />
-</a>
-<a
-  class="credit"
-  target="_blank"
-  [href]="'https://unsplash.com/@' + user?.username"
->
-  {{ user?.name }}
-</a>
+<div class="li">
+  <a
+    class="img"
+    [routerLink]="['/photo']"
+    [state]="{ image: urls, user: user, fromImage: true }"
+  >
+    <img class="img" [src]="urls?.regular" />
+  </a>
+  <a
+    class="credit"
+    target="_blank"
+    [href]="'https://unsplash.com/@' + user?.username"
+  >
+    {{ user?.name }}
+  </a>
+</div>
