--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  margin: 10px 20px;
 }
 h1 {
   font-weight: 100;
@@ -35,7 +35,6 @@ h1 {
 .Ul {
   width: 100%;
   list-style: none;
-
   padding: 8px;
   margin: 0;
   display: flex;
@@ -50,7 +49,7 @@ h1 {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 10px 5px;
   height: 400px;
   flex: 1 1 auto;
 }
